# serve-bsky-monitor-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: index.html  main.rs  mcpservice.rs
static/: index.css  index.html  index.js  jetstream.js  preactStandaloneRouter.js
