[package]
name = "serve-bskymonitor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
redis = "0.32.4"
rmcp-actix-web = "=0.2.5"
rmcp = "0.3"
tokio = "1.47.1"
serde = "1.0.219"
serde_json = "1.0.142"
http = "1.3.1"
tracing = "0.1.41"
