[package]
name = "serve-bskymonitor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.11.0"
redis = "0.32.4"
rmcp-actix-web = "=0.2.5"
rmcp = "0.3"
tokio = "1.47.1"
serde = "1.0.219"
serde_json = "1.0.142"
http = "1.3.1"
tracing = "0.1.41"
actix-files = "0.6.6"
actix-jwt-auth-middleware = "0.5.0"
ed25519-compact = "2.1.1"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
